data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2003.wast
;; 4. **Test Description**:    - **Scenario**: An imported function calls a `loop` that contains a `br_if`, intended to continue the loop from an outer module.    - **Constraint**: Check if the loop’s input parameters are properly re-evaluated when the branch is taken.    - **Differential Focus**: Test whether `wizard_engine` explicitly manages these parameters correctly, comparing it with WASM’s implicit type handling.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func))
    (func (export "test")
      (loop (param i32) (result i32)
        (call $external_func)
        (i32.const 42)
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)